Fix hover border covering active in pagination
Use the z-index from Bootstrap

BS3 commits: 1e64692716985246f70c89bcf8d5119e17a353c0

--- a/less/pagination.less
+++ b/less/pagination.less
@@ -33,7 +33,6 @@
   > li > span {
     &:hover,
     &:focus {
-      z-index: 2;
       color: @pagination-color;
       background-color: @pagination-hover-bg;
       border-color: @pagination-hover-border;
